# TodoApp

./: CMakeLists.txt  Commander.cpp  Commander.hpp  Config.hpp  Interface.cpp  Interface.hpp  Parser.cpp  Parser.hpp  README.md  Renderer.hpp  Shell.cpp  Shell.hpp  Task.hpp  TaskStorage.hpp  Todo.cpp  task_list.txt  todo
include/todo/: Commander.hpp  Config.hpp  Parser.hpp  Renderer.hpp  Shell.hpp  TaskStorage.hpp
src/: Commander.cpp  Parser.cpp  Shell.cpp  Todo.cpp
